# mus-downloader

./: .env.example  .gitignore  README.md  config.py  core.py  docker-compose.yml  main.py  metadata.py  pyproject.toml  tagger.py
sources/: __init__.py  amazon_decrypt.py  deezer.py  fallback.py  monochrome.py  soulseek.py  yandex.py  zvuk.py
