[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mus-downloader"
version = "0.1.0"
description = "Multi-source FLAC/MP3 Music Downloader"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "nonFeature"},
]
dependencies = [
    "pycryptodome>=3.18.0",
    "mutagen>=1.46.0",
    "yandex-music>=2.6.0",
    "httpx>=0.24.0",
    "yt-dlp>=2024.0.0",
    "zvuk-music>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
managed = true
